--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "papaparse": "^4.6.3",
     "react": "^16.8.3",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
