--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
+  "homepage": "https://antoinegag.github.io/curseforge-analytics-viewer",
   "name": "curseforgestatsreader",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chart.js": "^2.7.3",
     "papaparse": "^4.6.3",
     "react": "^16.8.3",
-    "react-chartjs": "^1.2.0",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
