--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "papaparse": "^4.6.3",
+    "plotly.js": "^1.44.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-plotly.js": "^2.2.0",
     "react-scripts": "2.1.5",
     "semantic-ui-react": "^0.85.0"
   },
