--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.62.0",
+    "@nivo/line": "^0.62.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-plotly.js": "^2.2.4",
+    "classnames": "^2.2.6",
+    "heroicons-react": "^1.3.0",
+    "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
@@ -39,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/react-loader-spinner": "^3.1.0",
     "autoprefixer": "^10.0.0",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
