--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "curseforge-analytics-viewer",
+  "homepage": "https://antoinegag.github.io/curseforge-analytics-viewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,13 +15,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-plotly.js": "^2.2.4",
+    "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "heroicons-react": "^1.3.0",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-loader-spinner": "^3.1.14",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
